<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scan_2d_merger</name>
  <version>2.0.0</version>
  <description>A laser scan merger for 1 to N 2D LiDARs, with approximate-time synchronization.</description>
  <maintainer email="a.pahlevani1998@gmail.com">Ali Pahlevani</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/ali-pahlevani/2D_Scan_Merger_ROS2</url>
  <url type="repository">https://github.com/ali-pahlevani/2D_Scan_Merger_ROS2</url>
  <url type="bugtracker">https://github.com/ali-pahlevani/2D_Scan_Merger_ROS2/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
